OD-10979 fix overflow for long page links
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@49064 fb2e276d-fae9-0310-b578-b71ac85840b9

--- a/editor/src/scss/components/links.scss
+++ b/editor/src/scss/components/links.scss
@@ -18,6 +18,8 @@
   &__title {
     padding-right: 15px;
     transition: color .15s;
+    text-overflow: ellipsis;
+    overflow: hidden;
     
     &:after {
       display: block;
