--- a/editor/src/scss/layout/sidebar.scss
+++ b/editor/src/scss/layout/sidebar.scss
@@ -38,6 +38,8 @@
       display: block;
       color: $gray;
       padding-top: 3px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
   
